<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns = "*">

    <TableRow>
    <Button
        style="@style/DigitButtonStyle"
        android:id="@+id/btn1"
        android:text="@string/n1"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/btn2"
        style="@style/DigitButtonStyle"
        android:text="@string/n2"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/btn3"
        style="@style/DigitButtonStyle"
        android:text="@string/n3"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <Button
        android:id="@+id/add"
        style="@style/OperationButtonStyle"
        android:text="@string/add"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    </TableRow>
    <TableRow>
    <Button
        android:id="@+id/btn4"
        style="@style/DigitButtonStyle"
        android:text="@string/n4"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn5"
        style="@style/DigitButtonStyle"
        android:text="@string/n5"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn6"
        style="@style/DigitButtonStyle"
        android:text="@string/n6"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toStartOf="@+id/sub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/sub"
        style="@style/OperationButtonStyle"
        android:text="@string/sub"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/add" />
    </TableRow>

    <TableRow>
    <Button
        android:id="@+id/btn7"
        style="@style/DigitButtonStyle"
        android:text="@string/n7"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDot"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn8"
        style="@style/DigitButtonStyle"
        android:text="@string/n8"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btn10"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn9"
        style="@style/DigitButtonStyle"
        android:text="@string/n9"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPercent"
        app:layout_constraintEnd_toStartOf="@+id/mult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/mult"
        style="@style/OperationButtonStyle"
        android:text="@string/mult"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

    </TableRow>
    <TableRow>
    <Button
        android:id="@+id/btnDot"
        style="@style/DigitButtonStyle"
        android:text="@string/dot"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        app:layout_constraintEnd_toStartOf="@+id/btn10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn0"
        style="@style/DigitButtonStyle"
        android:text="@string/n0"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/btnPercent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btnPercent"
        style="@style/OperationButtonStyle"
        android:text="@string/per"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNegate"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn10"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/div"
        style="@style/OperationButtonStyle"
        android:text="@string/div"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toTopOf="@+id/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintTop_toBottomOf="@+id/mult" />

    </TableRow>
    <TableRow>
    <Button
        android:id="@+id/btnClear"
        style="@style/GreyButtonStyle"
        android:text="@string/clear"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDot" />

    <Button
        android:id="@+id/btnBack"
        style="@style/GreyButtonStyle"
        android:text="@string/bs"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNegate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/btn10" />

    <Button
        android:id="@+id/btnNegate"
        style="@style/OperationButtonStyle"
        android:text="@string/neg"
        app:cornerRadius="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

        <Button
            android:id="@+id/calc"
            android:text="@string/calc"
            android:backgroundTint="#1991FF"
            android:fontFamily="Poppins"
            android:textColor="#B2DAFF"
            android:width="80dp"
            android:height="80dp"
            android:textSize="32sp"
            android:gravity="center"
            app:cornerRadius="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNegate"
            app:layout_constraintTop_toBottomOf="@+id/div" />
    </TableRow>

</TableLayout>